----------------------------------------------------------------------
Sun Feb 23 22:00:55 2003                        Michael Jennings (mej)

Still working on the documentation.  If you run "doxygen" from the
top-level directory, you can see what's there so far.

At some point, I'll be needing a logo.  So if you're artistically
inclined, feel free to take a stab at one. :)
----------------------------------------------------------------------
Fri Mar  7 23:52:30 2003                        Michael Jennings (mej)

Definitely making progress on the documentation, but there's still a
long way to go.
----------------------------------------------------------------------
Sat Mar  8 00:01:20 2003                        Michael Jennings (mej)

Let's try not to break stuff, shall we?
----------------------------------------------------------------------
Mon Mar 17 16:27:53 2003                        Michael Jennings (mej)

More work on docs.
----------------------------------------------------------------------
Tue Apr  1 23:07:15 2003                        Michael Jennings (mej)

More documentation work.  libast.h is almost finished.
----------------------------------------------------------------------
Fri Apr  4 22:59:45 2003                        Michael Jennings (mej)

Finally finished documenting libast.h.
----------------------------------------------------------------------
Tue Apr  8 17:14:32 2003                        Michael Jennings (mej)

Finished documenting libast_internal.h.  Also some 64-bit cleanliness
fixes.
----------------------------------------------------------------------
Thu Apr 10 17:54:19 2003                        Michael Jennings (mej)

Docs for some of the .c files.
----------------------------------------------------------------------
Fri Apr 11 17:10:15 2003                        Michael Jennings (mej)

Completed documentation of the memory management system.
----------------------------------------------------------------------